--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2cb5e8;
+  background-image: linear-gradient(141deg, #00C1DD 0%, #01c7d9 51%, #0079B0 75%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
