--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   height: 40vmin;
   pointer-events: none;
   border-radius: 15px;
+  box-shadow: 0 5px 10px 0 rgba(255, 255, 255, 0.2), 0 8px 22px 0 rgba(255, 255, 255, 255);
 }
 
 .App-header {
